- Fix header social icons and font size buttons alignment. - Fix social icons color.

--- a/css/mm-components-public.css
+++ b/css/mm-components-public.css
@@ -896,6 +896,16 @@ a.mm-button.full-width {
   color: #fff;
 }
 
+.mm-social-icons.circle.brand-colors a i.icon.fa-linkedin {
+  background-color: #0073b1;
+  color: #fff;
+}
+
+.mm-social-icons.circle.brand-colors a i.icon.fa-linkedin:hover {
+  background-color: #006097;
+  color: #fff;
+}
+
 .mm-social-icons.circle.brand-colors a i.icon.fa-google-plus {
   background-color: #dd4b39;
   color: #fff;
@@ -1050,6 +1060,17 @@ a.mm-button.full-width {
 }
 
 .mm-social-icons.circle.ghost.brand-colors a i.icon.fa-youtube:hover {
+  border-color: #550000;
+  color: #550000;
+}
+
+.mm-social-icons.circle.ghost.brand-colors a i.icon.fa-linkedin {
+  border-color: #bb0000;
+  color: #bb0000;
+  background-color: transparent;
+}
+
+.mm-social-icons.circle.ghost.brand-colors a i.icon.fa-linkedin:hover {
   border-color: #550000;
   color: #550000;
 }
@@ -1214,6 +1235,16 @@ a.mm-button.full-width {
   color: #fff;
 }
 
+.mm-social-icons.square.brand-colors a i.icon.fa-linkedin {
+  background-color: #bb0000;
+  color: #fff;
+}
+
+.mm-social-icons.square.brand-colors a i.icon.fa-linkedin:hover {
+  background-color: #550000;
+  color: #fff;
+}
+
 .mm-social-icons.square.brand-colors a i.icon.fa-google-plus {
   background-color: #dd4b39;
   color: #fff;
@@ -1372,6 +1403,17 @@ a.mm-button.full-width {
   color: #550000;
 }
 
+.mm-social-icons.square.ghost.brand-colors a i.icon.fa-linkedin {
+  border-color: #bb0000;
+  color: #bb0000;
+  background-color: transparent;
+}
+
+.mm-social-icons.square.ghost.brand-colors a i.icon.fa-linkedin:hover {
+  border-color: #550000;
+  color: #550000;
+}
+
 .mm-social-icons.square.ghost.brand-colors a i.icon.fa-google-plus {
   border-color: #dd4b39;
   color: #dd4b39;
@@ -1524,6 +1566,16 @@ a.mm-button.full-width {
 }
 
 .mm-social-icons.rounded-square.brand-colors a i.icon.fa-youtube:hover {
+  background-color: #550000;
+  color: #fff;
+}
+
+.mm-social-icons.rounded-square.brand-colors a i.icon.fa-linkedin {
+  background-color: #bb0000;
+  color: #fff;
+}
+
+.mm-social-icons.rounded-square.brand-colors a i.icon.fa-linkedin:hover {
   background-color: #550000;
   color: #fff;
 }
@@ -1686,6 +1738,17 @@ a.mm-button.full-width {
   color: #550000;
 }
 
+.mm-social-icons.rounded-square.ghost.brand-colors a i.icon.fa-linkedin {
+  border-color: #bb0000;
+  color: #bb0000;
+  background-color: transparent;
+}
+
+.mm-social-icons.rounded-square.ghost.brand-colors a i.icon.fa-linkedin:hover {
+  border-color: #550000;
+  color: #550000;
+}
+
 .mm-social-icons.rounded-square.ghost.brand-colors a i.icon.fa-google-plus {
   border-color: #dd4b39;
   color: #dd4b39;
@@ -1821,6 +1884,14 @@ a.mm-button.full-width {
 }
 
 .mm-social-icons.brand-colors a i.icon.fa-youtube:hover {
+  color: #550000;
+}
+
+.mm-social-icons.brand-colors a i.icon.fa-linkedin {
+  color: #bb0000;
+}
+
+.mm-social-icons.brand-colors a i.icon.fa-linkedin:hover {
   color: #550000;
 }
 
